# catscan

./: .gitignore  01-scan.sh  05-ocr.sh  09-match.sh  Makefile  README.md  config.cfg  config.sh  full_stack.sh  recategorise_all.sh
catFlap/: README.md  catFlap.cabal
catFlap/app/: CatConfig.hs  Main.hs
catFlap/src/: Api.hs  Config.hs  Lib.hs  Objects.hs  Repo.hs
catFlap/static/: index.html
catFlap/test/: Spec.hs
lib/: 01-scan.sh  05-ocr.sh  07-categorise.sh  09-store.sh
