name:                catFlap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/brachiel/catFlap#readme
license:             BSD3
license-file:        LICENSE
author:              Wanja Chresta
maintainer:          brachiel@github.invalid
copyright:           2017 Wanja Chresta
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api, Repo, Config
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , Spock
                     , text
                     , directory
                     , attoparsec
                     , containers
                     , split
  default-language:    Haskell2010

executable catFlap
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Spock
                     , catFlap
  default-language:    Haskell2010

test-suite catFlap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , catFlap 
                     , QuickCheck
                     , quickcheck-instances
                     , attoparsec
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brachiel/catFlap
